@@ -16,7 +16,7 @@
     </organization>
 
     <properties>
-        <oap.project.version>21.1.1</oap.project.version>
+        <oap.project.version>21.1.2</oap.project.version>
 
         <maven.compiler.release>21</maven.compiler.release>
         <encoding>UTF-8</encoding>
@@ -26,17 +26,31 @@
         <oap.deps.oap-teamcity.version>21.0.1</oap.deps.oap-teamcity.version>
 
         <build.counter>1</build.counter>
-        <oap.deps.maven.surefire.version>3.0.0-M7</oap.deps.maven.surefire.version>
+        <oap.deps.maven.surefire.version>3.2.5</oap.deps.maven.surefire.version>
         <oap.deps.maven.surefire.forkCount>1</oap.deps.maven.surefire.forkCount>
-        <oap.deps.maven.checkstyle.version>3.2.0</oap.deps.maven.checkstyle.version>
-        <oap.deps.checkstyle.version>10.3.3</oap.deps.checkstyle.version>
-        <oap.deps.maven.source.version>3.2.1</oap.deps.maven.source.version>
-        <oap.deps.maven.flatten.version>1.3.0</oap.deps.maven.flatten.version>
-        <oap.deps.maven.jar.version>3.2.2</oap.deps.maven.jar.version>
-        <oap.deps.maven.compiler.version>3.10.1</oap.deps.maven.compiler.version>
-        <oap.deps.maven.enforcer.version>3.1.0</oap.deps.maven.enforcer.version>
+        <oap.deps.maven.checkstyle.version>3.3.1</oap.deps.maven.checkstyle.version>
+        <oap.deps.checkstyle.version>10.13.0</oap.deps.checkstyle.version>
+        <oap.deps.maven.source.version>3.3.0</oap.deps.maven.source.version>
+        <oap.deps.maven.flatten.version>1.6.0</oap.deps.maven.flatten.version>
+        <oap.deps.maven.jar.version>3.3.0</oap.deps.maven.jar.version>
+        <oap.deps.maven.compiler.version>3.12.1</oap.deps.maven.compiler.version>
+        <oap.deps.maven.enforcer.version>3.4.1</oap.deps.maven.enforcer.version>
         <min.maven.version>3.6.3</min.maven.version>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>oap</id>
+            <url>https://artifacts.oaplatform.org/repository/maven/</url>
+        </repository>
+    </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>oap</id>
+            <url>https://artifacts.oaplatform.org/repository/maven/</url>
+        </pluginRepository>
+    </pluginRepositories>
 
     <dependencies>
         <dependency>
@@ -173,7 +187,8 @@
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>${oap.deps.maven.checkstyle.version}</version>
                 <configuration>
-                    <configLocation>https://raw.githubusercontent.com/oaplatform/oap-maven/master/.idea/checkstyle.xml</configLocation>
+                    <configLocation>https://raw.githubusercontent.com/oaplatform/oap-maven/master/.idea/checkstyle.xml
+                    </configLocation>
                     <encoding>UTF-8</encoding>
                     <consoleOutput>true</consoleOutput>
                     <failsOnError>true</failsOnError>
@@ -226,57 +241,4 @@
             </plugin>
         </plugins>
     </build>
-
-    <profiles>
-        <profile>
-            <id>performance</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>${oap.deps.maven.surefire.version}</version>
-                        <configuration>
-                            <argLine>
-                                -ea
-                                --add-opens=java.base/java.lang=ALL-UNNAMED
-                                --add-opens=java.base/java.math=ALL-UNNAMED
-                                --add-opens=java.base/java.util=ALL-UNNAMED
-                                --add-opens=java.base/java.util.stream=ALL-UNNAMED
-                                --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
-                                --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
-                                --add-opens=java.base/java.net=ALL-UNNAMED
-                                --add-opens=java.base/java.text=ALL-UNNAMED
-                                --add-opens=java.base/java.io=ALL-UNNAMED
-                                --add-opens=java.base/java.nio=ALL-UNNAMED
-                                --add-opens=java.sql/java.sql=ALL-UNNAMED
-                            </argLine>
-                            <trimStackTrace>false</trimStackTrace>
-                            <testFailureIgnore>true</testFailureIgnore>
-                            <useFile>true</useFile>
-                            <disableXmlReport>false</disableXmlReport>
-                            <printSummary>true</printSummary>
-                            <forkedProcessTimeoutInSeconds>9600</forkedProcessTimeoutInSeconds>
-                            <forkMode>once</forkMode>
-                            <useSystemClassLoader>false</useSystemClassLoader>
-                            <runOrder>balanced</runOrder>
-                            <includes>
-                                <include>**/*Performance.*</include>
-                                <include>**/*Perf.*</include>
-                            </includes>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-          <id>java-17</id>
-          <activation>
-            <jdk>(,18)</jdk>
-          </activation>
-          <properties>
-            <maven.compiler.release>17</maven.compiler.release>
-          </properties>
-        </profile>
-    </profiles>
 </project>
